--- a/data/desk/config.yaml
+++ b/data/desk/config.yaml
@@ -3,7 +3,8 @@
 # Set here any parameter that you want to override for this dataset
 # For example:
 processes: 4                  # Number of threads to use
-feature_min_frames: 500      # Number of features
+feature_min_frames: 2000      # Number of features
 depthmap_min_consistent_views: 2      # Min number of views that should reconstruct a point for it to be valid
 depthmap_save_debug_files: yes        # Save debug files with partial reconstruction results
 feature_process_size: 2048
+desc_patch_sigma: 0.1
